kubernetes/dev/01-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-front
  annotations:
    argocd-image-updater.argoproj.io/image-list: my-app=alexisc73/todo-app-front
    argocd-image-updater.argoproj.io/my-app.update-strategy: latest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-front
  template:
    metadata:
      labels:
        app: todo-app-front
    spec:
      containers:
        - name: todo-backend
          image: alexisc73/todo-app-front:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
