kubernetes/dev/02-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-front
spec:
  rules:
  - host: "alexis.test"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-app-front
            port:
              number: 80
